--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 main {
-   
   text-align: center;
   width: 40rem;
   position: absolute;
@@ -54,23 +53,26 @@ main div {
 .arama {
   border: 1px solid lightgrey;
   border-radius: 25px;
-  
-  display: inline-block;
+
+  /* display: inline-block; */
+  display: flex;
+  padding: 8px ;
+
+  margin-left: 5rem;
 
   width: 30rem;
-  height: 2.5rem;
+  height: 2.8rem;
 }
-.arama img {
-  /* padding: 6px; */
-  margin: 0 7rem; 
-  
+.ara {
+  margin: 0 1rem;
+  padding-bottom: 4px;
 }
-.arama a img{
-  margin: 0 6rem; 
+.mik {
+  margin: 0 23rem;
+}
 
-}
 .arama:hover {
-  box-shadow: 3px 3px 3px whitesmoke;
+  box-shadow: 3px 3px 3px rgb(221, 219, 219);
 }
 .aciklama a.bir {
   border: 1px solid gainsboro;
@@ -91,12 +93,12 @@ main div {
   padding: 8px;
 }
 .aciklama a.bir:hover {
-  border: 1px solid rgb(172, 168, 168);
+  border: 1px solid rgb(214, 214, 214);
 
   box-shadow: 1px 1px whitesmoke;
 }
 .aciklama a.iki:hover {
-  border: 1px solid rgb(172, 168, 168);
+   border: 1px solid rgb(214, 214, 214);
 
   box-shadow: 1px 1px whitesmoke;
 }
@@ -127,4 +129,8 @@ footer {
   bottom: 0px;
 
   width: 100%;
+}
+span a{
+  color: rgb(25, 25, 150);
+
 }
